I'd just like to interject

--- a/www/css/metro-bootstrap.css
+++ b/www/css/metro-bootstrap.css
@@ -4984,7 +4984,7 @@ a {
   font-size: 10pt;
   margin: 5px 20px 2px 5px;
   background: transparent;
-  color: #ffffff;
+  color: #000000;
 }
 .metro .tile .brand .text,
 .metro .tile .tile-status .text {
